--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <img src="./images/logo.png" alt="logo isp 63"/>
       </div>
       <div class="nav_items">
-        <a href="">Oferta academica <i class="fa-solid fa-angle-down"></i></a>
-        <a href="">Oferta academica <i class="fa-solid fa-angle-down"></i></a>
+        <a href="">Acerca del Instituto <i class="fa-solid fa-angle-down"></i></a>
+        <a href="">Carreras <i class="fa-solid fa-angle-down"></i></a>
         <a href="">Oferta academica <i class="fa-solid fa-angle-down"></i></a>
         <a href="">Oferta academica <i class="fa-solid fa-angle-down"></i></a>
       </div>
